--- a/ps4.html
+++ b/ps4.html
@@ -147,12 +147,12 @@
 
                     <div class="col-sm-4 col-lg-4 col-md-4">
                         <div class="thumbnail">
-                            <img src="https://i.redditmedia.com/8OJ-12kpHXqeeu0tTE8OfyIIivDox7AJ4i0DxHiAhrc.jpg?w=320&s=3213aac6b8172fc8e6fd814b207c78fe" alt="">
+                            <img src="https://i.redditmedia.com/aJ8-2ZPb-F7Y0Kr-_J6cJ1oSsdHqVjhOKVimq2pojCc.jpg?w=320&s=6b26d91d408e6b7df5f6e78b6835cf29" alt="">
                             <div class="caption">
                                 <h4 class="pull-right">84.99€</h4>
-                                <h4><a href="producto.html">TW3 + Joycons</a>
+                                <h4><a href="producto.html">Naruto Storm 3</a>
                                 </h4>
-                                <p>Un pack indispensable para nintendo switch.</p>
+                                <p>Naruto regresa con los personajes de Shipudden en una nueva revuelta ninja.</p>
                             </div>
                             <div class="ratings">
                                 <p class="pull-right">6 reviews</p>
