--- a/ps4.html
+++ b/ps4.html
@@ -83,10 +83,10 @@
                         <div class="thumbnail">
                             <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/panel-131892295-image-ec2710adc89a42d6-320-320.png" alt="">
                             <div class="caption">
-                                <h4 class="pull-right">24.99€</h4>
-                                <h4><a href="producto.html">Metroid Zero Mission</a>
+                                <h4 class="pull-right">70.00€</h4>
+                                <h4><a href="producto.html">Tales Of Berseria</a>
                                 </h4>
-                                <p>Remake del Metroid original, con nuevos temas, areas y mini-jefes.</p>
+                                <p>Nueva entrega de la saga "Tales of" que nos lleva a un mundo en decadencia que salvar.</p>
                             </div>
                             <div class="ratings">
                                 <p class="pull-right">15 reviews</p>
