--- a/ps4.html
+++ b/ps4.html
@@ -81,7 +81,7 @@
 
                     <div class="col-sm-4 col-lg-4 col-md-4">
                         <div class="thumbnail">
-                            <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/panel-131892295-image-ec2710adc89a42d6-320-320.png" alt="">
+                            <img src="https://4.bp.blogspot.com/-Oayl7kUnOWg/WKMdBA5SMaI/AAAAAAAApOM/oNFEgiQ6ggIOlyEXoBuo0nwWKlczsAPKgCLcB/s320/Tales%2Bof%2BBerseria%2B1.jpg" alt="">
                             <div class="caption">
                                 <h4 class="pull-right">70.00€</h4>
                                 <h4><a href="producto.html">Tales Of Berseria</a>
